--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,123 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "AdUnblock Documentation"
+description: "Everything you need to know about implementing and optimizing AdUnblock for your website."
 ---
 
-## Setting up
+# AdUnblock Documentation
 
-Get your documentation site up and running in minutes.
+Everything you need to know about implementing and optimizing AdUnblock for your website.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+## Quick Start
 
-## Make it yours
+Get started with AdUnblock and begin recovering your ad revenue today.
 
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
+<CardGroup cols={2}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Getting Started"
+    icon="rocket"
+    href="/get-started"
   >
-    Edit your docs locally and preview them in real time.
+    Learn the basics of AdUnblock, how to set it up, and start recovering your ad revenue.
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
+    title="API Reference"
     icon="code"
-    href="/essentials/code"
+    href="/api-reference/rest-api"
   >
-    Add sample code to demonstrate how to use your product.
+    Detailed API documentation for developers looking to customize AdUnblock implementation.
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+</CardGroup>
 
-## Need inspiration?
+## Platform Integration Guides
+
+Choose your platform and follow our step-by-step integration guides.
+
+<CardGroup cols={2}>
+  <Card
+    title="HTML/JavaScript"
+    icon="code"
+    href="/guides/html-javascript"
+  >
+    Direct integration using vanilla HTML and JavaScript.
+  </Card>
+  <Card
+    title="WordPress"
+    icon="wordpress"
+    href="/guides/wordpress"
+  >
+    Easy WordPress plugin installation and configuration.
+  </Card>
+  <Card
+    title="React/Next.js"
+    icon="react"
+    href="/guides/react-nextjs"
+  >
+    Integration guide for React and Next.js applications.
+  </Card>
+  <Card
+    title="Vue/Nuxt.js"
+    icon="vuejs"
+    href="/guides/vue-nuxtjs"
+  >
+    Setup instructions for Vue and Nuxt.js projects.
+  </Card>
+  <Card
+    title="Angular"
+    icon="angular"
+    href="/guides/angular"
+  >
+    Angular application integration guide.
+  </Card>
+  <Card
+    title="Shopify"
+    icon="shopify"
+    href="/guides/shopify"
+  >
+    E-commerce integration for Shopify stores.
+  </Card>
+  <Card
+    title="Wix/Squarespace"
+    icon="wix"
+    href="/guides/wix-squarespace"
+  >
+    Website builder platform integration.
+  </Card>
+  <Card
+    title="Test With Chrome Extension"
+    icon="chrome"
+    href="/guides/test-with-chrome-extension"
+  >
+    Test your AdUnblock implementation using our Chrome extension.
+  </Card>
+</CardGroup>
+
+## Resources & Support
+
+<CardGroup cols={2}>
+  <Card
+    title="FAQ"
+    icon="question-circle"
+    href="/faq"
+  >
+    Answers to commonly asked questions about AdUnblock features and functionality.
+  </Card>
+  <Card
+    title="System Status"
+    icon="activity"
+    href="/guides/system-status"
+  >
+    Check the current status of AdUnblock services.
+  </Card>
+</CardGroup>
+
+## Need help with implementation?
+
+Our support team is ready to assist you with any questions or issues.
 
 <Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
+  title="Contact Support"
+  icon="headset"
+  href="https://ad-unblock.com/contact"
 >
-  Browse our showcase of exceptional documentation sites.
+  Get personalized help from our technical support team.
 </Card>
