--- a/index.mdx
+++ b/index.mdx
@@ -1,13 +1,7 @@
 ---
-title: "AdUnblock Documentation"
+title: "Introduction"
 description: "Everything you need to know about implementing and optimizing AdUnblock for your website."
 ---
-
-# AdUnblock Documentation
-
-Everything you need to know about implementing and optimizing AdUnblock for your website.
-
-## Quick Start
 
 Get started with AdUnblock and begin recovering your ad revenue today.
 
