--- a/index.mdx
+++ b/index.mdx
@@ -16,7 +16,7 @@ Get started with AdUnblock and begin recovering your ad revenue today.
   <Card
     title="API Reference"
     icon="code"
-    href="/api-reference/rest-api"
+    href="/api-reference/fetch-config"
   >
     Detailed API documentation for developers looking to customize AdUnblock implementation.
   </Card>
