--- a/guides/test-with-chrome-extension.mdx
+++ b/guides/test-with-chrome-extension.mdx
@@ -29,9 +29,10 @@ Test your AdUnblock integration using our Chrome extension before deploying to p
   </Step>
 
   <Step title="Install Chrome Extension">
-    Install the AdUnblock Devtool Chrome extension to test your integration: -
-    Visit **AdUnblock Devtool** in the Chrome Web Store - Click **Add to
-    Chrome** to install the extension
+    Install the AdUnblock Devtool Chrome extension to test your integration:
+    
+    - Visit [**AdUnblock Devtool**](https://chromewebstore.google.com/detail/adunblock-devtool/gnlaoijjmmehcmccdkmbbcmmlpegcpmi) in the Chrome Web Store
+    - Click **Add to Chrome** to install the extension
   </Step>
 
   <Step title="Test Your Website">
