--- a/get-started.mdx
+++ b/get-started.mdx
@@ -1,157 +1,57 @@
 ---
 title: "Getting Started"
-description: "Learn the basics of AdUnblock, how to set it up, and start recovering your ad revenue."
+description: "Start recovering your lost ad revenue in a few simple steps"
 ---
 
-# Getting Started
+# Getting Started with Ad Unblock
 
-AdUnblock is a powerful service that helps websites recover lost revenue from ad blockers by detecting when users have ad blockers enabled and presenting alternative content or messages to encourage whitelisting.
+Start recovering your lost ad revenue in a few simple steps
 
-## What is AdUnblock?
+## Dashboard-Guided Integration
 
-AdUnblock is a lightweight JavaScript solution that:
+The Ad Unblock dashboard provides personalized, step-by-step instructions for your specific setup.
 
-- **Detects ad blockers** with high accuracy across all major browsers
-- **Recovers lost revenue** by showing alternative content to users with ad blockers
-- **Improves user experience** with customizable messages and designs
-- **Provides detailed analytics** on ad blocker usage and recovery rates
-
-## How it works
+## Quick Start Guide
 
 <Steps>
-  <Step title="Detection">
-    AdUnblock's advanced detection engine identifies when a user has an ad blocker enabled, using multiple detection methods for maximum accuracy.
+  <Step title="Create Your Account">
+    Sign up for an Ad Unblock account to access the dashboard and all features.
+    
+    [Register Now](https://ad-unblock.com/signup)
   </Step>
-  <Step title="Response">
-    When an ad blocker is detected, AdUnblock displays your customized message, alternative content, or paywall to encourage users to whitelist your site.
+  
+  <Step title="Add Your Website">
+    Once logged in, add your website to the dashboard to receive a unique verification code.
+    
+    **Dashboard → Add Site**
   </Step>
-  <Step title="Recovery">
-    Users can choose to disable their ad blocker, whitelist your site, or engage with alternative monetization options you provide.
-  </Step>
-  <Step title="Analytics">
-    Track your recovery rates, user behavior, and revenue impact through our comprehensive dashboard.
+  
+  <Step title="Follow Dashboard Instructions">
+    The dashboard provides customized integration steps for your specific platform. Simply follow these instructions to integrate Ad Unblock.
+    
+    - Platform-specific guides
+    - Custom verification code
+    - One-click verification
   </Step>
 </Steps>
 
-## Quick Setup
+### Ready to get started?
 
-Get started with AdUnblock in just a few minutes:
+Sign up for a free trial and start recovering your ad revenue today.
 
 <CardGroup cols={2}>
   <Card
-    title="1. Sign Up"
-    icon="user-plus"
+    title="Start Free Trial"
+    icon="rocket"
     href="https://ad-unblock.com/signup"
   >
-    Create your free AdUnblock account and get your API key.
+    Get started with your free trial today
   </Card>
   <Card
-    title="2. Choose Integration"
-    icon="code"
-    href="/guides/html-javascript"
+    title="Contact Us"
+    icon="headset"
+    href="https://ad-unblock.com/contact"
   >
-    Select your platform and follow the integration guide.
-  </Card>
-  <Card
-    title="3. Customize Messages"
-    icon="palette"
-    href="https://ad-unblock.com/dashboard"
-  >
-    Design your ad blocker detection messages and responses.
-  </Card>
-  <Card
-    title="4. Go Live"
-    icon="rocket"
-    href="/guides/test-with-chrome-extension"
-  >
-    Test your implementation and start recovering revenue.
+    Get personalized help from our team
   </Card>
 </CardGroup>
-
-## Key Features
-
-### Advanced Detection
-- Multi-layer detection algorithms
-- Support for all major ad blockers
-- Regular updates for new ad blocker versions
-- False positive prevention
-
-### Customizable Responses
-- Custom messaging and branding
-- Multiple response types (overlay, banner, redirect)
-- A/B testing capabilities
-- Mobile-optimized designs
-
-### Detailed Analytics
-- Real-time ad blocker detection rates
-- Revenue recovery metrics
-- User behavior insights
-- Conversion tracking
-
-### Easy Integration
-- One-line JavaScript implementation
-- Support for all major platforms
-- WordPress plugin available
-- Developer-friendly API
-
-## Pricing
-
-AdUnblock offers flexible pricing plans to suit websites of all sizes:
-
-- **Free Plan**: Up to 10,000 page views per month
-- **Starter Plan**: Up to 100,000 page views per month
-- **Pro Plan**: Up to 1,000,000 page views per month
-- **Enterprise**: Custom solutions for high-traffic sites
-
-<Card
-  title="View Pricing Details"
-  icon="credit-card"
-  href="https://ad-unblock.com/pricing"
->
-  Compare plans and choose the best option for your website.
-</Card>
-
-## Next Steps
-
-Ready to implement AdUnblock? Choose your integration method:
-
-<CardGroup cols={3}>
-  <Card
-    title="HTML/JavaScript"
-    icon="code"
-    href="/guides/html-javascript"
-  >
-    Direct integration
-  </Card>
-  <Card
-    title="WordPress"
-    icon="wordpress"
-    href="/guides/wordpress"
-  >
-    Plugin installation
-  </Card>
-  <Card
-    title="React/Next.js"
-    icon="react"
-    href="/guides/react-nextjs"
-  >
-    Framework integration
-  </Card>
-</CardGroup>
-
-## Support
-
-Need help getting started? We're here to help:
-
-- **Documentation**: Comprehensive guides for all platforms
-- **Email Support**: Direct access to our technical team
-- **Live Chat**: Real-time assistance during business hours
-- **Community**: Join our Discord community for tips and best practices
-
-<Card
-  title="Contact Support"
-  icon="headset"
-  href="https://ad-unblock.com/contact"
->
-  Get personalized help from our support team.
-</Card>
