--- a/guides/wordpress.mdx
+++ b/guides/wordpress.mdx
@@ -1,11 +1,7 @@
 ---
-title: "WordPress Integration"
+title: "WordPress"
 description: "Easy WordPress plugin installation"
 ---
-
-# WordPress Integration
-
-AdUnblock provides a dedicated WordPress plugin that makes integration simple for WordPress sites.
 
 ## WordPress Plugin Installation
 
@@ -13,7 +9,8 @@ The official AdUnblock plugin is available in the WordPress repository at [https
 
 <Steps>
   <Step title="Download Plugin">
-    Download the AdUnblock WordPress plugin from the WordPress repository or your dashboard.
+    Download the AdUnblock WordPress plugin from the WordPress repository or
+    your dashboard.
   </Step>
   <Step title="Install Plugin">
     Upload and activate the plugin through your WordPress admin panel.
@@ -65,22 +62,3 @@ After installing the plugin, configure it through **Settings > AdUnblock**:
 - **User Roles**: Which user roles to show messages to
 - **Mobile Settings**: Mobile-specific configuration
 - **Cache Compatibility**: Settings for caching plugins
-
-## Next Steps
-
-<CardGroup cols={2}>
-  <Card
-    title="Test Implementation"
-    icon="flask"
-    href="/guides/test-with-chrome-extension"
-  >
-    Verify your WordPress integration works correctly
-  </Card>
-  <Card
-    title="JavaScript Integration"
-    icon="js"
-    href="/guides/html-javascript"
-  >
-    Learn about manual JavaScript integration
-  </Card>
-</CardGroup>
