--- a/index.mdx
+++ b/index.mdx
@@ -6,101 +6,91 @@ description: "Everything you need to know about implementing and optimizing AdUn
 Get started with AdUnblock and begin recovering your ad revenue today.
 
 <CardGroup cols={2}>
-  <Card
-    title="Getting Started"
-    icon="rocket"
-    href="/get-started"
-  >
-    Learn the basics of AdUnblock, how to set it up, and start recovering your ad revenue.
+  <Card title="Getting Started" icon="rocket" href="/get-started">
+    Start recovering your lost ad revenue in a few simple steps with
+    dashboard-guided integration.
   </Card>
   <Card
-    title="API Reference"
+    title="Configuration API"
     icon="code"
     href="/api-reference/fetch-config"
   >
-    Detailed API documentation for developers looking to customize AdUnblock implementation.
+    Fetch AdUnblock latest configuration and script sources for your
+    integration.
   </Card>
 </CardGroup>
 
-## Platform Integration Guides
+## Integration Guides
 
 Choose your platform and follow our step-by-step integration guides.
 
 <CardGroup cols={2}>
   <Card
-    title="HTML/JavaScript"
-    icon="code"
-    href="/guides/html-javascript"
-  >
-    Direct integration using vanilla HTML and JavaScript.
-  </Card>
-  <Card
-    title="WordPress"
-    icon="wordpress"
-    href="/guides/wordpress"
-  >
-    Easy WordPress plugin installation and configuration.
-  </Card>
-  <Card
-    title="React/Next.js"
-    icon="react"
-    href="/guides/react-nextjs"
-  >
-    Integration guide for React and Next.js applications.
-  </Card>
-  <Card
-    title="Vue/Nuxt.js"
-    icon="vuejs"
-    href="/guides/vue-nuxtjs"
-  >
-    Setup instructions for Vue and Nuxt.js projects.
-  </Card>
-  <Card
-    title="Angular"
-    icon="angular"
-    href="/guides/angular"
-  >
-    Angular application integration guide.
-  </Card>
-  <Card
-    title="Shopify"
-    icon="shopify"
-    href="/guides/shopify"
-  >
-    E-commerce integration for Shopify stores.
-  </Card>
-  <Card
-    title="Wix/Squarespace"
-    icon="wix"
-    href="/guides/wix-squarespace"
-  >
-    Website builder platform integration.
-  </Card>
-  <Card
     title="Test With Chrome Extension"
     icon="chrome"
     href="/guides/test-with-chrome-extension"
   >
-    Test your AdUnblock implementation using our Chrome extension.
+    Test your AdUnblock integration using our Chrome extension before going
+    live.
+  </Card>
+  <Card title="WordPress Integration" icon="wordpress" href="/guides/wordpress">
+    Easy WordPress plugin installation from the official repository.
+  </Card>
+  <Card
+    title="General HTML/JS Integration"
+    icon="code"
+    href="/guides/html-javascript"
+  >
+    Simple HTML/JavaScript integration that works with any website.
+  </Card>
+  <Card
+    title="Server-Side Integration"
+    icon="server"
+    href="/guides/nextjs"
+  >
+    Advanced server-side integration for Node.js, PHP, and Python frameworks.
   </Card>
 </CardGroup>
 
-## Resources & Support
+## Server-Side Integration
 
-<CardGroup cols={2}>
+Advanced server-side packages for dynamic script loading with caching and security.
+
+<CardGroup cols={3}>
   <Card
-    title="FAQ"
-    icon="question-circle"
-    href="/faq"
+    title="Next.js"
+    icon="react"
+    href="/guides/nextjs"
   >
-    Answers to commonly asked questions about AdUnblock features and functionality.
+    React Server Components with TypeScript support
   </Card>
   <Card
-    title="System Status"
-    icon="activity"
-    href="/guides/system-status"
+    title="React Router"
+    icon="react"
+    href="/guides/react-router"
   >
-    Check the current status of AdUnblock services.
+    Data mode and framework mode integration
+  </Card>
+  <Card
+    title="Express"
+    icon="server"
+    href="/guides/express"
+  >
+    Middleware for Express and Node.js applications
+  </Card>
+  <Card
+    title="PHP (Laravel/Symfony)"
+    icon="php"
+    href="/guides/php"
+  >
+    Blade helpers and Twig extensions
+  </Card>
+  <Card
+    title="Python (Django)"
+    icon="python"
+    href="/guides/python"
+  >
+    Template tags with Django cache integration
   </Card>
 </CardGroup>
 
