--- a/index.mdx
+++ b/index.mdx
@@ -24,39 +24,17 @@ Get started with AdUnblock and begin recovering your ad revenue today.
 
 Choose your platform and follow our step-by-step integration guides.
 
-<CardGroup cols={2}>
+<CardGroup cols={3}>
   <Card
     title="Test With Chrome Extension"
     icon="chrome"
     href="/guides/test-with-chrome-extension"
   >
-    Test your AdUnblock integration using our Chrome extension before going
-    live.
+    Test your AdUnblock integration using our Chrome extension before going live.
   </Card>
   <Card title="WordPress Integration" icon="wordpress" href="/guides/wordpress">
     Easy WordPress plugin installation from the official repository.
   </Card>
-  <Card
-    title="General HTML/JS Integration"
-    icon="code"
-    href="/guides/html-javascript"
-  >
-    Simple HTML/JavaScript integration that works with any website.
-  </Card>
-  <Card
-    title="Server-Side Integration"
-    icon="server"
-    href="/guides/nextjs"
-  >
-    Advanced server-side integration for Node.js, PHP, and Python frameworks.
-  </Card>
-</CardGroup>
-
-## Server-Side Integration
-
-Advanced server-side packages for dynamic script loading with caching and security.
-
-<CardGroup cols={3}>
   <Card
     title="Next.js"
     icon="react"
@@ -91,6 +69,13 @@ Advanced server-side packages for dynamic script loading with caching and securi
     href="/guides/python"
   >
     Template tags with Django cache integration
+  </Card>
+  <Card
+    title="Others (HTML/JS)"
+    icon="code"
+    href="/guides/html-javascript"
+  >
+    Simple HTML/JavaScript integration that works with any website.
   </Card>
 </CardGroup>
 
