--- a/guides/test-with-chrome-extension.mdx
+++ b/guides/test-with-chrome-extension.mdx
@@ -3,6 +3,8 @@ title: "Test With Chrome Extension"
 description: "Test your AdUnblock implementation using our Chrome extension"
 ---
 
+Test your AdUnblock integration using our Chrome extension before deploying to production.
+
 <Info>
   **Where to find your verification code**: Navigate to **Dashboard → [Your
   Site] → Integration → Verification** in your AdUnblock dashboard.
@@ -17,43 +19,44 @@ description: "Test your AdUnblock implementation using our Chrome extension"
 
 <Steps>
   <Step title="Prerequisites">
-    Before testing, ensure you have the following setup: - Register your site in
-    the AdUnblock dashboard - Install an ad blocker extension (like AdBlock or
-    AdBlock Plus) in Chrome - Verify the ad blocker is enabled for your test
-    site - This setup is necessary to confirm AdUnblock works correctly by
-    showing ads despite the ad blocker
+    Before testing, ensure you have the following setup:
+    
+    - Register your site in the AdUnblock dashboard
+    - Install an ad blocker extension (like AdBlock or AdBlock Plus) in Chrome
+    - Verify the ad blocker is enabled for your test site
+    - This setup is necessary to confirm AdUnblock works correctly by showing ads despite the ad blocker
   </Step>
 
-{" "}
-<Step title="Install Chrome Extension">
-  Install the AdUnblock Devtool Chrome extension to test your integration: -
-  Visit [**AdUnblock
-  Devtool**](https://chromewebstore.google.com/detail/adunblock-devtool/gnlaoijjmmehcmccdkmbbcmmlpegcpmi)
-  in the Chrome Web Store - Click **Add to Chrome** to install the extension
-</Step>
+  <Step title="Install Chrome Extension">
+    Install the AdUnblock Devtool Chrome extension to test your integration:
+    
+    - Visit [**AdUnblock Devtool**](https://chromewebstore.google.com/detail/adunblock-devtool/gnlaoijjmmehcmccdkmbbcmmlpegcpmi) in the Chrome Web Store
+    - Click **Add to Chrome** to install the extension
+  </Step>
 
-{" "}
-<Step title="Test Your Website">
-  Use the extension to test the AdUnblock script on your website: - Navigate to
-  your website in Chrome - Click the **AdUnblock Devtool** extension icon in
-  your browser toolbar - Enter your **Verification Code**:
-  `YOUR_VERIFICATION_CODE` - Enter the **Script URL**:
-  `https://adblock.static-cloudflare.workers.dev/index.js` - Click **Apply to
-  Current Tab** - The page will automatically reload with the AdUnblock script
-  injected
-  <Warning>
-    Your verification code is domain-specific, so you can only test on your own
-    registered website. This extension is for testing purposes only before
-    implementing a permanent integration.
-  </Warning>
-</Step>
+  <Step title="Test Your Website">
+    Use the extension to test the AdUnblock script on your website:
+    
+    - Navigate to your website in Chrome
+    - Click the **AdUnblock Devtool** extension icon in your browser toolbar
+    - Enter your **Verification Code**: `YOUR_VERIFICATION_CODE`
+    - Enter the **Script URL**: `https://adblock.static-cloudflare.workers.dev/index.js`
+    - Click **Apply to Current Tab**
+    - The page will automatically reload with the AdUnblock script injected
+    
+    <Warning>
+      Your verification code is domain-specific, so you can only test on your own registered website. This extension is for testing purposes only before implementing a permanent integration.
+    </Warning>
+  </Step>
 
   <Step title="Verify Integration">
-    After the page reloads with the AdUnblock script, verify the following: ✅
-    **Website Functions Normally**: Your site should work without any issues ✅
-    **Ads Are Visible**: Ads should display even with an ad blocker installed If
-    both conditions are met, your integration is successful! You can now proceed
-    with implementing a permanent solution using one of our integration guides.
+    After the page reloads with the AdUnblock script, verify the following:
+    
+    ✅ **Website Functions Normally**: Your site should work without any issues
+    
+    ✅ **Ads Are Visible**: Ads should display even with an ad blocker installed
+    
+    If both conditions are met, your integration is successful! You can now proceed with implementing a permanent solution using one of our integration guides.
   </Step>
 </Steps>
 
@@ -79,3 +82,14 @@ https://config.adunblocker.com/server-tag.json
 ## Need Help?
 
 If you're experiencing any issues with the integration, please contact our support team at [support@adunblock.com](mailto:support@adunblock.com).
+
+## Next Steps
+
+<CardGroup cols={2}>
+  <Card title="JavaScript Integration" icon="js" href="/guides/html-javascript">
+    Implement AdUnblock with vanilla JavaScript
+  </Card>
+  <Card title="WordPress Integration" icon="wordpress" href="/guides/wordpress">
+    Use our WordPress plugin for easy setup
+  </Card>
+</CardGroup>
