fix support link

--- a/guides/html-javascript.mdx
+++ b/guides/html-javascript.mdx
@@ -63,6 +63,14 @@ As a site owner, you are responsible for ensuring your integration uses the late
 - Use the API endpoint `https://config.adunblocker.com/server-tag.json` to programmatically retrieve the latest valid scripts
 - Never implement client-side fallbacks that fetch from our API directly
 
-## Need Help?
+## Need help with implementation?
 
-If you're experiencing any issues with the integration, please contact our support team at [support@adunblock.com](mailto:support@adunblock.com).
+Our support team is ready to assist you with any questions or issues.
+
+<Card
+  title="Contact Support"
+  icon="headset"
+  href="https://ad-unblock.com/contact"
+>
+  Get personalized help from our technical support team.
+</Card>
