--- a/guides/test-with-chrome-extension.mdx
+++ b/guides/test-with-chrome-extension.mdx
@@ -40,7 +40,7 @@ Test your AdUnblock integration using our Chrome extension before deploying to p
     - Navigate to your website in Chrome
     - Click the **AdUnblock Devtool** extension icon in your browser toolbar
     - Enter your **Verification Code**: `YOUR_VERIFICATION_CODE`
-    - Enter the **Script URL**: `https://adblock.static-cloudflare.workers.dev/index.js`
+    - Enter the **Script URL**: `https://adblock1.static-cloudflare.workers.dev/index.js`
     - Click **Apply to Current Tab**
     - The page will automatically reload with the AdUnblock script injected
     
