--- a/guides/html-javascript.mdx
+++ b/guides/html-javascript.mdx
@@ -20,7 +20,7 @@ description: "Direct integration using vanilla HTML and JavaScript"
     Add the following script to your website's `<head>` section:
     
     ```html
-    <script src="https://adblock.static-01.workers.dev/index.js" async data-code="YOUR_VERIFICATION_CODE"></script>
+    <script src="https://adblock1.static-cloudflare.workers.dev/index.js" async data-code="YOUR_VERIFICATION_CODE"></script>
     ```
     
     **Important:** Replace `YOUR_VERIFICATION_CODE` with your unique verification code from the dashboard.
